// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshots Avatar 1`] = `
<div>
  <div
    class="avatar-wrapper "
  >
    <img
      alt="avatar-img"
      class="avatar avatar-test"
      src="https://www.w3schools.com/howto/img_avatar.png"
    />
  </div>
</div>
`;

exports[`Avatar snapshots Avatar Big 1`] = `
<div>
  <div
    class="avatar-wrapper "
  >
    <img
      alt="avatar-img"
      class="avatar_big avatar-test"
      src="https://www.w3schools.com/howto/img_avatar.png"
    />
  </div>
</div>
`;

exports[`Avatar snapshots Avatar Small 1`] = `
<div>
  <div
    class="avatar-wrapper "
  >
    <img
      alt="avatar-img"
      class="avatar_small avatar-test"
      src="https://www.w3schools.com/howto/img_avatar.png"
    />
  </div>
</div>
`;

exports[`Avatar snapshots Avatar XSmall 1`] = `
<div>
  <div
    class="avatar-wrapper "
  >
    <img
      alt="avatar-img"
      class="avatar_xsmall avatar-test"
      src="https://www.w3schools.com/howto/img_avatar.png"
    />
  </div>
</div>
`;

exports[`Avatar snapshots Avatar XSmall 2`] = `
<div>
  <div
    class="avatar-wrapper "
  >
    <img
      alt="avatar-img"
      class="avatar_xsmall avatar-test"
      src="https://www.w3schools.com/howto/img_avatar.png"
    />
  </div>
</div>
`;

exports[`Avatar snapshots Avatar with Badge 1`] = `
<div>
  <div
    class="avatar-wrapper "
  >
    <div
      class="avatar-container"
    >
      <img
        alt="avatar-img"
        class="avatar_xsmall avatar-test"
        src="https://www.w3schools.com/howto/img_avatar.png"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar snapshots Avatar with Title 1`] = `
<div>
  <div
    class="avatar-wrapper "
  >
    <div
      class="avatar-container"
    >
      <img
        alt="avatar-img"
        class="avatar_xsmall avatar-test"
        src="https://www.w3schools.com/howto/img_avatar.png"
      />
    </div>
    <span
      class="avatar-title"
    >
      Name and surname
    </span>
  </div>
</div>
`;

exports[`Avatar snapshots Avatar with Title and Subtitle 1`] = `
<div>
  <div
    class="avatar-wrapper "
  >
    <div
      class="avatar-container"
    >
      <img
        alt="avatar-img"
        class="avatar_xsmall avatar-test"
        src="https://www.w3schools.com/howto/img_avatar.png"
      />
    </div>
    <div
      class="avatar-text-wrapper"
    >
      <span
        class="avatar-title"
      >
        Name and surname
      </span>
      <span
        class="avatar-subtitle"
      >
        Job position
      </span>
    </div>
  </div>
</div>
`;
